--- a/src/content/pages/index.njk
+++ b/src/content/pages/index.njk
@@ -116,11 +116,26 @@ permalink: /index.html
         <div class="s-section__number">
             <p>03</p>
         </div>
-        <div class="s-section__content">
+        <div class="s-section__content aboutus">
             <h1 class="s-section__title">
-                Infomations
+                About Us
             </h1>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptatibus illum veniam maiores id et fuga eveniet explicabo, dignissimos fugit reprehenderit voluptatem, ratione ad non dicta earum error sed quos.
+            <p class="aboutus__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce. Phasellus sit amet neque non eros hendrerit faucibus non malesuada erat. <br> <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce. Phasellus sit amet neque non eros hendrerit faucibus non malesuada erat. </p>
+            <ul class="aboutus__list">
+                <li class="aboutus__item">
+                        <h2 class="aboutus__value__title">Quality</h2>
+                        <p class="aboutus__value__text">We focus on quality because we consider it to be extremely important. By ensuring this, we are confident that our products will live longer than any ordinary products. By lasting longer, our fabric will keep you warm longer. It's up to you.</p>
+                </li>
+                <li class="aboutus__item">
+                        <h2 class="aboutus__value__title">Ecology</h2>
+                        <p class="aboutus__value__text">We focus on quality because we consider it to be extremely important. By ensuring this, we are confident that our products will live longer than any ordinary products. By lasting longer, our fabric will keep you warm longer. It's up to you.</p>
+                </li>
+                <li class="aboutus__item">
+                        <h2 class="aboutus__value__title">Social</h2>
+                        <p class="aboutus__value__text">We focus on quality because we consider it to be extremely important. By ensuring this, we are confident that our products will live longer than any ordinary products. By lasting longer, our fabric will keep you warm longer. It's up to you.</p>
+                </li>
+            </ul>
+            <p class="aboutus__link">>>></p>
         </div>
     </div>
     <div class="s-section">
