--- a/src/assets/scss/base/_base-section.scss
+++ b/src/assets/scss/base/_base-section.scss
@@ -190,7 +190,7 @@
 
     font-family: "Panchang";
     font-weight: 700;
-    font-size: 42px;
+    font-size: 5vh;
 
     color: var(--color-white);
   
@@ -202,6 +202,14 @@
   
 }
   
+@media all and (min-width:745px){
+    .s-section__title {
+
+        font-size: 6vh;
+      
+    }
+}
+
 @media all and (min-width: 1024px) {
 
     .s-section__title {
@@ -217,6 +225,11 @@
 
         grid-area: 1 / 1 / 3 / 1;
 
+    }
+
+    .lastsection::after{
+        background-image: none;
+        transform: none;
     }
 
 }
