--- a/src/content/pages/index.njk
+++ b/src/content/pages/index.njk
@@ -52,14 +52,20 @@ permalink: /index.html
         </div>
         <div class="s-section__content cardsection slideFromTop">
             <div class="cardsection__content">
-                <h2 class="cardsection__title">Our culture.</h2>
+                <div class="cardsection__head">
+                    <h2 class="cardsection__title">Our culture.</h2>
+                    <p class="cardsection__hint">click to expand</p>
+                </div>
                 <p class="cardsection__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce. <br> <br> Nullam congue leo ut libero aliquam commodo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. <br> <br> Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce.</p>
             </div>
             <div class="cardsection__img"></div>
         </div>
         <div class="s-section__content cardsection reverse slideFromBottom">
             <div class="cardsection__content">
-                <h2 class="cardsection__title">Focus on quality.</h2>
+                <div class="cardsection__head">
+                    <h2 class="cardsection__title">Focus on quality.</h2>
+                    <p class="cardsection__hint">click to expand</p>
+                </div>
                 <p class="cardsection__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce. <br> <br> Nullam congue leo ut libero aliquam commodo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. <br> <br> Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce.</p>
             </div>
             <div class="cardsection__img"></div>
