--- a/src/content/pages/index.njk
+++ b/src/content/pages/index.njk
@@ -73,7 +73,7 @@ permalink: /index.html
         <div class="s-section__content learnmore anim__backgroundimg">
             <div class="learnmore__button">
                 <p>Learn More</p>
-                <img src="../../assets/img/Mate_Star_Green.svg" alt="">
+                <div class="learnmore__img"></div>
             </div>
         </div>
     </div>
