--- a/src/assets/scss/page/index.scss
+++ b/src/assets/scss/page/index.scss
@@ -308,7 +308,7 @@ CARD SECTION
 }
 
 .cardsection:hover{
-  height: fit-content;
+  height: 570px;
 }
 
 .cardsection:hover{
@@ -316,7 +316,6 @@ CARD SECTION
     display: none;
   }
   .cardsection__text{
-    transform: scale(1);
     opacity: 1;
   }
 }
@@ -359,7 +358,6 @@ CARD SECTION
 
   margin: 0;
 
-  transform: scale(0);
   opacity: 0;
 
   transition: 0.5s ease-in-out;
@@ -391,7 +389,7 @@ CARD SECTION
     height: 270px;
   }
   .cardsection:hover{
-    max-height: fit-content;
+    height: 450px;
   }
   .cardsection__content{
     margin-top: 0;
@@ -454,7 +452,7 @@ CARD SECTION
     transform: scale(1);
     opacity: 1;
   }
-  
+
   .reverse{
     display: grid;
     align-self: flex-start;
@@ -494,6 +492,8 @@ LEARN MORE
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  transition: 0.5s;
 }
 
 .learnmore__button{
@@ -512,11 +512,29 @@ LEARN MORE
   color: var(--color-text-light);
 
   border-radius: 100px;
+
+  transition: 0.5s;
 }
 
-.learnmore__button img{
-  max-width: 25px;
+
+.learnmore__img{
+  width: 25px;
+  height: 25px;
+  background-image: url(../img/Mate_Star_Green.svg);
+  background-size: cover;
+
+  transition: 0.5s;
 }
+
+.learnmore__button:hover{
+  background-color: var(--color-accent);
+  cursor: pointer;
+  .learnmore__img{
+    background-image: url(../img/Mate_Star.svg);
+    transform: rotate(180deg);
+  }
+}
+
 
 .learnmore__button p{
   font-family: "DMSans";
@@ -561,7 +579,8 @@ LEARN MORE
     border-radius: 100px;
   }
 
-  .learnmore__button img{
+
+  .learnmore__img{
     max-width: 35px;
   }
   
@@ -638,6 +657,14 @@ SHOP SECTION
   background-position: 50% 30%;
   background-repeat: no-repeat;
   background-size: cover;
+
+  transition: 0.25s ease-in-out;
+}
+
+.shopsection__item:hover{
+  background-size: 120%;
+  filter: brightness(1.3);
+  cursor: pointer;
 }
 
 .shopsection__item__label{
@@ -667,8 +694,15 @@ SHOP SECTION
   background-color: var(--color-accent);
   background-size: 40%;
   background-position: 50%;
-
+  
+  transition: 0.25s ease-in-out;
 }
+
+.shopsection__list li:nth-child(4):hover{
+  cursor: pointer;
+  background-color: var(--color-text-light);
+}
+
 
 @media all and (min-width: 745px){
 
@@ -709,21 +743,19 @@ SHOP SECTION
   }
   .shopsection__item{
     width: 525px;
+    transition: 0.25s ease-in-out;
   }
   .shopsection__item__label{
     height: 100px;
     font-size: 3.5vh;
   }
 
-  .shopsection__list li:nth-child(3)::after{
-    content: "";
-    background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(28,28,28,1) 50%);
-    height: 600px;
-    width: 265px;
-    position: absolute;
-
-    right: 500px;
+  .shopsection__item:hover{
+    cursor: pointer;
+    background-size: 120%;
+    filter: brightness(1.3);
   }
+
 
   .shopsection__list li:nth-child(4){
     width: 250px;
@@ -770,6 +802,7 @@ ABOUT US SECTION
 .aboutus__item:hover{
   cursor: pointer;
   height: 275px;
+  background-color: var(--color-green-400);
 }
 
 .aboutus__value__title{
