Learn More Tests

--- a/src/content/pages/index.njk
+++ b/src/content/pages/index.njk
@@ -32,7 +32,7 @@ permalink: /index.html
     </div>
 
     <div class="s-section s-section__green">
-        <div class="s-section__number number--small">
+        <div class="s-section__number">
             <p>01</p>
         </div>
         <div class="s-section__content">
@@ -51,23 +51,41 @@ permalink: /index.html
             </div>
         </div>
         <div class="s-section__content cardsection slideFromTop">
-            <div class="cardsection__content">
-                <h2 class="cardsection__title">Why Ardennes?</h2>
-                <p class="cardsection__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce. <br> <br> Nullam congue leo ut libero aliquam commodo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. <br> <br> Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce. <br> <br> Nullam congue leo ut libero aliquam commodo.</p>
+            <div class="learn__card">
+                <h2 class="learn__title">Our cultur.</h2>
+                <input type="checkbox" id="cultur" class="learn__input">
+                <div open class="learn__details">
+                    <div class="learn__summary anim__backgroundimg">
+                        <label for="cultur" class="learn__label">
+                            <img src="../../assets/img/Mate_Star_Green.svg" alt="">
+                        </label>
+                    </div>
+                    <p class="learn__text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce.
+                        Nullam congue leo ut libero aliquam commodo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. 
+                        Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce.
+                        Nullam congue leo ut libero aliquam commodo.
+                    </p>
+                </div>
             </div>
-            <div class="cardsection__img"></div>
         </div>
-        <div class="s-section__content cardsection reverse slideFromBottom">
-            <div class="cardsection__content">
-                <h2 class="cardsection__title">Focus on the Quality</h2>
-                <p class="cardsection__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce. <br> <br> Nullam congue leo ut libero aliquam commodo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. <br> <br> Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce. <br> <br> Nullam congue leo ut libero aliquam commodo.</p>
-            </div>
-            <div class="cardsection__img"></div>
-        </div>
-        <div class="s-section__content learnmore anim__backgroundimg">
-            <div class="learnmore__button">
-                <p>Learn More</p>
-                <img src="../../assets/img/Mate_Star_Green.svg" alt="">
+        <div class="s-section__content cardsection slideFromBottom">
+                    <div class="learn__card">
+                <h2 class="learn__title">We focus on quality.</h2>
+                <input type="checkbox" id="quality" class="learn__input">
+                <div open class="learn__details">
+                    <div class="learn__summary anim__backgroundimg" style="background-image: url(../../assets/img/ardennesQuality.JPG)">
+                        <label for="quality" class="learn__label">
+                            <img src="../../assets/img/Mate_Star_Green.svg" alt="">
+                        </label>
+                    </div>
+                    <p class="learn__text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce.
+                        Nullam congue leo ut libero aliquam commodo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. 
+                        Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce.
+                        Nullam congue leo ut libero aliquam commodo.
+                    </p>
+                </div>
             </div>
         </div>
     </div>
