--- a/src/assets/scss/page/index.scss
+++ b/src/assets/scss/page/index.scss
@@ -293,125 +293,23 @@ CARD SECTION
 */
 
 .cardsection{
-  margin-block-start: 70px;
 
   overflow: visible;
 
-  margin-bottom: 42px;
+  margin-block: 12px;
 
-  display: flex;
-  flex-direction: column;
-
-}
-
-.cardsection :nth-child(2){order: -1;}
-
-.reverse{
-  margin-top: 0;
-  display: flex;
-  flex-direction: column;
-}
-
-.cardsection__content{
-  margin-top: 12px;
-}
-
-.cardsection__title{
-  font-size: 3vh;
-  margin-bottom: 12px;
-}
-
-.cardsection__text{
-  font-weight: normal;
-  font-size: 18px;
-
-  color: var(--color-text-light);
-
-  max-width: 850px;
-
-  margin: 0;
-}
-
-.cardsection__img{
-  min-height: 200px;
-  min-width: 330px;
-
-  overflow: hidden;
-
-  background-image: url(../img/ardennesMountains.JPG);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.reverse .cardsection__img{
-  background-image: url(../img/ardennesQuality.JPG);
-}
-
-
-@media all and (min-width: 745px){
-  .cardsection{
-    flex-direction: row;
-    gap: 36px;
-    margin-bottom: 60px;
-  }
-  .cardsection__content{
-    margin-top: 0;
-  }
-  .cardsection__img{
-    max-width: 300px;
-    max-height: 400px;
-  }
-  .cardsection__text{
-    font-size: 16px;
-  }
-  .reverse{
-    flex-direction: row-reverse;
-  }
 }
 
 @media all and (min-width: 1024px) {
 
   .cardsection{
-    margin: 0 120px;
-    align-self: flex-end;
 
-    display: grid;
-  }
-  .cardsection :nth-child(3){order: 3;}
-
-  .cardsection__title{
-    grid-area: 1 / 1 / 1 / 1;
-    margin-bottom: 36px;
-    font-size: 6.5vh;
-  }
-
-  .cardsection__content{
-    margin-top: 5vh;
-    grid-area: 1 / 1 / 4 / 1;
-  }
-  .cardsection__img{
-    grid-area: 4 / 1 / 8 / 1;
-
-    width: 850px;
-    max-width: none;
-    max-height: none;
-  }
-
-  .reverse{
-    display: grid;
-    align-self: flex-start;
-  }
-
-  .reverse .cardsection__title{
-    grid-area: 5 / 1 / 5 / 1;
-  }
-  .reverse .cardsection__content{
-    grid-area: 5 / 1 / 8 / 1;
-    margin-top: 0;
-  }
-  .reverse .cardsection__img{
-    grid-area: 1 / 1 / 5 / 1;
+    overflow: visible;
+    margin-block: 0;
+    margin-top: -24px;
+  
+    margin-inline: 120px;
+  
   }
 
 }
@@ -422,51 +320,77 @@ LEARN MORE
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++
 */
 
-.learnmore{
-  height: 200px;
-  margin: 0 -12px -30px -12px;
+.learn__card {
 
-  background-image: url(../img/learnMore2.JPG);
-  background-size: cover;
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
+  margin-inline: -12px;
+  overflow: visible;
+
+}
+
+.learn__title {
+
+  color: #FFFDF8;
+  font-size: 24px;
+  text-align: center;
+
+  background-color: #0BA979;
+
+  padding-block: 12px;
+
+}
+
+.learn__summary {
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background-image: url(../../assets/img/ardennesMountains.JPG);
+  background-size: 100%;
+
+  height: 180px;
+
+}
+
+.learn__summary img {
+
+  width: 30px;
+  height: 30px;
+
+  padding: 12px;
+  background-color: #1C1C1C;
+
+  cursor: pointer;
+
+}
+
+.learn__text {
+
+  padding: 32px;
+  margin: 0;
+
+  font-size: 15px;
+  color: #FFFDF8;
+
+  background-color: #0BA979;
+
+  transition: all 0.2s ease;
 
   overflow: hidden;
 
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
-.learnmore__button{
-  width: 150px;
-  height: 50px;
+.learn__input {
 
-  position: absolute;
+  display: none;
 
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  gap:10px;
-
-  background-color: var(--color-background-dark);
-  color: var(--color-text-light);
-
-  border-radius: 100px;
 }
 
-.learnmore__button img{
-  max-width: 25px;
-}
+.learn__input:checked + .learn__details .learn__text {
 
-.learnmore__button p{
-  font-family: "DMSans";
-  font-weight: bold;
-  font-size: 12px;
-  
-  width: fit-content;
+  max-height: 0;
+  padding-block: 0;
+
 }
 
 
@@ -479,41 +403,63 @@ LEARN MORE
 
 @media all and (min-width: 1024px) {
 
-  .learnmore{
-    min-width: 635px;
-    height: auto;
+  .learn__card {
 
-    margin: 0 120px;
+    height: 100vh;
+    max-width: 1200px;
+  
   }
 
-  .learnmore__button{
-    width: 200px;
-    height: 75px;
+  .learn__title {
+
+    color: #FFFDF8;
+    font-size: 48px;
+    text-align: center;
   
-    position: absolute;
+    background-color: #0BA979;
   
+    padding-block: 24px;
+  
+  }
+
+  .learn__details {
+
+    height: 100%;
+    max-height: 100%;
+
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap:15px;
+    flex-direction: column;
+    justify-content: space-between;
+
+  }
   
-    background-color: var(--color-background-dark);
-    color: var(--color-text-light);
+  .learn__summary {
   
-    border-radius: 100px;
+    height: 100%;
+    background-size: 150%;
+  
+  }
+  
+  .learn__summary img {
+  
+    display: none;
+  
   }
 
-  .learnmore__button img{
-    max-width: 35px;
-  }
+  .learn__text {
+
+    padding: 32px;
+    margin: 0;
+    height: 100%;
   
-  .learnmore__button p{
-    font-family: "DMSans";
-    font-weight: bold;
-    font-size: 16px;
-    
-    width: fit-content;
+    font-size: 18px;
+    color: #FFFDF8;
+  
+    background-color: #0BA979;
+
+  
+    overflow: visible;
+  
   }
 
 }
