--- a/src/content/pages/index.njk
+++ b/src/content/pages/index.njk
@@ -53,7 +53,7 @@ permalink: /index.html
         <div class="s-section__content cardsection slideFromTop">
             <div class="learn__card">
                 <h2 class="learn__title">Our cultur.</h2>
-                <input type="checkbox" id="cultur" class="learn__input">
+                <input type="checkbox" id="cultur" class="learn__input" checked>
                 <div open class="learn__details">
                     <div class="learn__summary anim__backgroundimg">
                         <label for="cultur" class="learn__label">
@@ -72,7 +72,7 @@ permalink: /index.html
         <div class="s-section__content cardsection slideFromBottom">
                     <div class="learn__card">
                 <h2 class="learn__title">We focus on quality.</h2>
-                <input type="checkbox" id="quality" class="learn__input">
+                <input type="checkbox" id="quality" class="learn__input" checked>
                 <div open class="learn__details">
                     <div class="learn__summary anim__backgroundimg" style="background-image: url(../../assets/img/ardennesQuality.JPG)">
                         <label for="quality" class="learn__label">
