--- a/src/assets/scss/page/index.scss
+++ b/src/assets/scss/page/index.scss
@@ -306,7 +306,7 @@ CARD SECTION
 
     overflow: visible;
     margin-block: 0;
-    margin-top: -24px;
+
   
     margin-inline: 120px;
   
@@ -406,6 +406,7 @@ LEARN MORE
   .learn__card {
 
     height: 100vh;
+    max-height: 100vh;
     max-width: 1200px;
   
   }
@@ -419,6 +420,7 @@ LEARN MORE
     background-color: #0BA979;
   
     padding-block: 24px;
+    padding-inline: 42px;
   
   }
 
@@ -448,15 +450,15 @@ LEARN MORE
 
   .learn__text {
 
-    padding: 32px;
+    padding: 32px !important;
     margin: 0;
     height: 100%;
+    max-height: 100% !important; 
   
     font-size: 18px;
     color: #FFFDF8;
   
     background-color: #0BA979;
-
   
     overflow: visible;
   
