--- a/src/assets/scss/page/index.scss
+++ b/src/assets/scss/page/index.scss
@@ -307,8 +307,11 @@ CARD SECTION
     overflow: visible;
     margin-block: 0;
 
-  
-    margin-inline: 120px;
+    margin-inline: 60px;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
   
   }
 
@@ -405,7 +408,6 @@ LEARN MORE
 
   .learn__card {
 
-    height: 100vh;
     max-height: 100vh;
     max-width: 1200px;
   
@@ -437,7 +439,7 @@ LEARN MORE
   
   .learn__summary {
   
-    height: 100%;
+    height: 480px;
     background-size: 150%;
   
   }
