--- a/src/content/pages/index.njk
+++ b/src/content/pages/index.njk
@@ -88,6 +88,12 @@ permalink: /index.html
                 </div>
             </div>
         </div>
+        <div class="s-section__content learnmore anim__backgroundimg">
+            <div class="learnmore__button">
+                <p>Learn More</p>
+                <img src="../../assets/img/Mate_Star_Green.svg" alt="">
+            </div>
+        </div>
     </div>
 
     <div class="s-section">
