--- a/src/assets/scss/page/index.scss
+++ b/src/assets/scss/page/index.scss
@@ -248,16 +248,16 @@ FIRST SECTION
 
   .firstsection__yearA {
     font-family: "DMSans";
-    font-size: 575px;
+    font-size: 60vh;
     font-weight: 300;
-    line-height: 700px;
+    line-height: 80vh;
 
     color: var(--color-green-200);
   }
   
   .firstsection__yearB {
     font-family: "DMSans";
-    font-size: 150px;
+    font-size: 15vh;
     color: var(--color-green-200);
 
     margin: 100px 0 0 50px;
@@ -273,7 +273,7 @@ FIRST SECTION
     position: absolute;
   
     max-width: 1100px;
-    margin: 550px 0 0 715px;
+    margin: 60vh 0 0 72vh;
   
     display: flex;
     flex-direction: column;
@@ -408,7 +408,7 @@ LEARN CARDS
   .learn__title {
 
     color: #FFFDF8;
-    font-size: 48px;
+    font-size: 4vh;
     text-align: center;
   
     background-color: #0BA979;
@@ -431,7 +431,7 @@ LEARN CARDS
   
   .learn__summary {
   
-    height: 480px;
+    height: 45vh;
     background-size: 150%;
   
   }
