--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -9,6 +9,7 @@
 @import "base/base-section.scss";
 
 @import "partials/mainnav.scss";
+@import "partials/footer.scss";
 
 @import "page/index.scss";
 @import "page/shop.scss";
