Setup of the product page on PC

--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,6 +1,6 @@
     <div class="s-section lastsection">
-        <div class="s-section__number number--large">
-            <p>04</p>
+        <div class="s-section__number number--small">
+            <p></p>
         </div>
         <div class="s-section__content footersection">
             <h1 class="s-section__title footer__title">
