--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -13,5 +13,6 @@
 
 @import "page/index.scss";
 @import "page/shop.scss";
+@import "page/product.scss";
 
 @import "animations/_animation-slide.scss";
