--- a/src/assets/scss/params/_params-colors.scss
+++ b/src/assets/scss/params/_params-colors.scss
@@ -20,9 +20,9 @@
 
     --color-grey-100: #1C1C1C; // default
     --color-grey-200: #323232;
-    --color-grey-300: #555453;
+    --color-grey-300: #555453; // disabled
     --color-grey-400: #777674;
-    --color-grey-500: #A4A39F;
+    --color-grey-500: #A4A39F; // sub Text
 
     
     /* incident variables */
