--- a/src/assets/scss/page/product.scss
+++ b/src/assets/scss/page/product.scss
@@ -12,7 +12,8 @@
 
 .product__content {
 
-    width: 100vw;
+    width: 95vw;
+    margin-left: 5vw;
     height: 100%;
     background-color: var(--color-grey-100);
 
@@ -174,6 +175,19 @@
 
 }
 
+.size__label {
+
+    cursor: pointer;
+
+}
+
+.size__input:disabled + label {
+
+    cursor: default;
+
+}
+
+
 .size__label p {
 
     padding: 12px;
@@ -182,6 +196,19 @@
 
     color: var(--color-white);
     text-align: center;
+
+}
+
+.size__label:hover p {
+
+
+    color: var(--color-green-300);
+
+}
+
+.size__input:checked + label:hover p {
+
+    color: var(--color-green-500);
 
 }
 
@@ -218,6 +245,18 @@
 
 }
 
+.color__label {
+
+    cursor: pointer;
+
+}
+
+.color__input:disabled + label {
+
+    cursor: default;
+
+}
+
 .color__label div {
 
     width: 36px;
@@ -237,9 +276,22 @@
 
 }
 
+.color__label:hover div {
+
+    border: 1px solid var(--color-white);
+
+}
+
+
 .color__input:disabled + label div {
 
     opacity: 0.5;
+
+}
+
+.color__input:disabled + label:hover div {
+
+    border: 0px solid var(--color-white);
 
 }
 
@@ -303,6 +355,7 @@ input[type=number]::-webkit-outer-spin-button {
 .quantity__label:hover p {
 
     background-color: var(--color-green-400);
+    cursor: pointer;
 
 }
 
