--- a/src/assets/scss/page/product.scss
+++ b/src/assets/scss/page/product.scss
@@ -47,7 +47,7 @@
     display: flex;
     flex-direction: column;
 
-    gap: 36px;
+    gap: 3.5vh;
 
 }
 
@@ -133,7 +133,7 @@
     display: flex;
     flex-direction: column;
 
-    gap: 36px;
+    gap: 3.5vh;
 
 }
 
@@ -144,7 +144,7 @@
     display: flex;
     flex-direction: column;
 
-    gap: 36px;
+    gap: 3.5vh;
 
 }
 
@@ -152,6 +152,7 @@
 
     font-family: 'Panchang';
     color: var(--color-green-300);
+    font-size: 48px;
 
 }
 
@@ -310,6 +311,7 @@
     box-shadow: 0 0 0 rgba(0,0,0,0);
 
     text-align: center;
+    font-size: 16px;
     color: var(--color-white);
 
     background-color: var(--color-grey-100);
