--- a/src/content/pages/product.njk
+++ b/src/content/pages/product.njk
@@ -14,13 +14,27 @@ permalink: /product.html
                     /
                     <a href="/shop.html?type=hoodie" class="url__link">hoodie</a>
                 </p>
-                <div class="product__img"></div>
-                <ul class="product__thumbnails">
-                    <li class="product__thumbnail"><img src="../../assets/img/ardennesQuality.JPG" alt="" class="o-fluidimg"></li>
-                    <li class="product__thumbnail"><img src="../../assets/img/ardennesQuality.JPG" alt="" class="o-fluidimg"></li>
-                    <li class="product__thumbnail"><img src="../../assets/img/ardennesQuality.JPG" alt="" class="o-fluidimg"></li>
-                    <li class="product__thumbnail"><img src="../../assets/img/ardennesQuality.JPG" alt="" class="o-fluidimg"></li>
-                </ul>
+                <div class="thumbnail__list-big">
+                    <input class="thumbnail__input" name="thumbnail" type="radio" id="a" checked>
+                        <div class="thumbnail__big" style="background-image: url(../../assets/img/ardennesQuality.JPG)"></div>
+                    <input class="thumbnail__input" name="thumbnail" type="radio" id="b">
+                        <div class="thumbnail__big" style="background-image: url(../../assets/img/ardennesMountains.JPG)"></div>
+                    <input class="thumbnail__input" name="thumbnail" type="radio" id="c">
+                        <div class="thumbnail__big" style="background-image: url(../../assets/img/landPageImg2.JPG)"></div>
+                </div>
+                <div class="thumbnail__list-small">
+                    <label class="thumbnail__label" for="a">
+                        <div class="thumbnail__small" style="background-image: url(../../assets/img/ardennesQuality.JPG)"></div>
+                    </label>
+                    <label class="thumbnail__label" for="b">
+                        <div class="thumbnail__small" style="background-image: url(../../assets/img/ardennesMountains.JPG)"></div>
+                    </label>
+                    <label class="thumbnail__label" for="c">
+                        <div class="thumbnail__small" style="background-image: url(../../assets/img/landPageImg2.JPG)"></div>
+                    </label>
+                    </label>
+                </div>
+
                 <p class="product__description">
                     Nullam congue leo ut libero aliquam commodo. Phasellus sit amet neque non eros hendrerit faucibus non malesuada erat.
                 </p>
