Reponsive Product Page

--- a/src/content/pages/product.njk
+++ b/src/content/pages/product.njk
@@ -6,7 +6,7 @@ permalink: /product.html
 
 {% block content %}
 
-    <div class="product__container">
+    <div class="s-section">
         <div class="product__content">
             <div class="product__left">
                 <p class="product__url">
@@ -14,6 +14,7 @@ permalink: /product.html
                     /
                     <a href="/shop.html?type=hoodie" class="url__link">hoodie</a>
                 </p>
+                <h2 class="product__name name__left">Hoodie</h2>
                 <div class="thumbnail__list-big">
                     <input class="thumbnail__input" name="thumbnail" type="radio" id="a" checked>
                         <div class="thumbnail__big" style="background-image: url(../../assets/img/ardennesQuality.JPG)"></div>
@@ -43,7 +44,7 @@ permalink: /product.html
                 </a>
             </div>
             <div class="product__right">
-                <h2 class="product__name">Hoodie</h2>
+                <h2 class="product__name name__right">Hoodie</h2>
                 <form action="get" class="product__form">
                     <ul class="product__sizes">
                         <li class="product__size">
