--- a/src/assets/scss/page/product.scss
+++ b/src/assets/scss/page/product.scss
@@ -1,20 +1,5 @@
-.product__container {
-
-    width: 100%;
-    height: 100%;
-
-    display: flex;
-
-    align-items: center;
-    justify-content: center;
-
-}
-
 .product__content {
 
-    width: 95vw;
-    margin-left: 5vw;
-    height: 100%;
     background-color: var(--color-grey-100);
 
     display: flex;
@@ -24,6 +9,11 @@
 
     gap: 60px;
 
+    overflow: hidden;
+
+    padding-top: 60px;
+
+
 }
 
 @media all and (min-width: 1024px) {
@@ -31,6 +21,9 @@
     .product__content {
 
         flex-direction: row;
+        width: 95vw;
+        margin-top: 0;
+        margin-left: 5vw;
     
     }
 
@@ -42,7 +35,7 @@
 
 .product__left {
 
-    max-width: 552px;
+    max-width: 100%;
 
     display: flex;
     flex-direction: column;
@@ -50,6 +43,28 @@
     gap: 3.5vh;
 
 }
+
+
+@media all and (min-width: 1024px) {
+
+    .product__left {
+
+        max-width: 552px;
+    
+    }
+
+}
+
+@media all and (min-width: 1024px) {
+
+    .name__left {
+
+        display: none;
+
+    }
+
+}
+
 
 .product__url {
 
@@ -68,11 +83,20 @@
 
 .thumbnail__list-big {
 
-    width: 552px;
     height: 45vh;
     max-height: 100%;
 
     position: relative;
+
+}
+
+@media all and (min-width: 1024px) {
+
+    .thumbnail__list-big {
+
+        width: 552px;
+    
+    }
 
 }
 
@@ -131,7 +155,7 @@
     
     width: 100%;
     height: 100%;
-    background-size: 150%;
+    background-size: 180%;
     background-position: center center;
     
     transition: all 0.2s ease;
@@ -141,7 +165,7 @@
 .thumbnail__label:hover .thumbnail__small {
 
     opacity: 0.6;
-    background-size: 175%;
+    background-size: 200%;
 
 }
 
@@ -172,9 +196,9 @@
  = RIGHT SIDE
  ================ */
 
-.product__right {
+ .product__right {
 
-    max-width: 552px;
+    max-width: 100%;
 
     display: flex;
     flex-direction: column;
@@ -183,14 +207,54 @@
 
 }
 
+
+@media all and (min-width: 1024px) {
+
+    .product__right {
+
+        max-width: 552px;
+    
+    }
+
+}
+
+.name__right {
+
+    display: none;
+
+}
+
+
+@media all and (min-width: 1024px) {
+
+    .name__right {
+
+        display: inline;
+
+    }
+
+}
+
+
 .product__form {
 
     width: 100%;
 
     display: flex;
     flex-direction: column;
+    align-items: center;
 
     gap: 3.5vh;
+
+}
+
+@media all and (min-width: 1024px) {
+
+    .product__form {
+
+        align-items: start;
+    
+    }
 
 }
 
@@ -210,9 +274,19 @@
     flex-direction: row;
     align-items: center;
 
-    gap: 24px;
+    gap: 12px;
     margin: 0;
     padding: 0;
+
+}
+
+@media all and (min-width: 1024px) {
+
+    .product__sizes {
+
+        gap: 24px;
+    
+    }
 
 }
 
@@ -238,11 +312,22 @@
 .size__label p {
 
     padding: 12px;
-    width: 48px;
+    width: 30px;
     margin: 0;
 
     color: var(--color-white);
     text-align: center;
+
+}
+
+@media all and (min-width: 1024px) {
+
+    .size__label p {
+
+        padding: 12px;
+        width: 48px;
+    
+    }
 
 }
 
@@ -415,9 +500,13 @@ input[type=number]::-webkit-outer-spin-button {
 
 .product__total {
 
+    width: 100%;
+
     padding-top: 24px;
 
     border-top: 1px solid var(--color-grey-500);
+
+    align-self: flex-end;
     
 }
 
