--- a/src/assets/scss/partials/footer.scss
+++ b/src/assets/scss/partials/footer.scss
@@ -4,6 +4,12 @@ FOOTER SECTION
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++
 */
 
+.footersection {
+
+  border-top: 1px solid var(--color-green-300);
+
+}
+
 .footer__list{
     padding: 0 24px;
     margin-top: 40px;
@@ -51,7 +57,7 @@ FOOTER SECTION
   
     .footersection{
       width: max-content;
-      margin-left: -100px;
+      border-top: 0px solid var(--color-green-300);
     }
   
     .footer__list{
