aboutpage WIP mobile/tablet (desktop WIP)

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -14,5 +14,6 @@
 @import "page/index.scss";
 @import "page/shop.scss";
 @import "page/product.scss";
+@import "page/about.scss";
 
 @import "animations/_animation-slide.scss";
