--- a/src/assets/scss/page/index.scss
+++ b/src/assets/scss/page/index.scss
@@ -203,7 +203,7 @@ FIRST SECTION
 .firstsection__text{
 
   font-weight: 300;
-  font-size: 15px;
+  font-size: 18px;
 
   margin-top: 34px;
 
@@ -736,6 +736,7 @@ ABOUT US SECTION
 .aboutus__list{
   padding: 0;
   list-style: none;
+  margin-inline: -12px;
 }
 
 .aboutus__item{
@@ -756,12 +757,14 @@ ABOUT US SECTION
 .aboutus__item:hover{
   cursor: pointer;
   height: 275px;
+  background-color: var(--color-green-400);
 }
 
 .aboutus__value__title{
-  font-family: "Panchang";
+  font-family: "DMSans";
   font-weight: bold;
-  font-size: 5vh;
+  font-size: 36px;
+  color: var(--color-text);
 
   text-align: center;
 
@@ -773,7 +776,7 @@ ABOUT US SECTION
   font-weight: normal;
   font-size: 18px;
 
-  color: var(--color-text-light);
+  padding-inline: 12px;
 }
 
 .aboutus__link{
@@ -789,14 +792,17 @@ ABOUT US SECTION
 }
 
 @media all and (min-width: 745px){
+  .aboutus__list{
+    margin-inline: -24px;
+  }
   .aboutus__value__title{
-    padding-block-start: 10px;
+    padding-block-start: 25px;
     padding-block-end: 25px;
   }
 
   .aboutus__item:hover{
     cursor: pointer;
-    height: 225px;
+    height: 200px;
   }
   
 }
@@ -816,24 +822,25 @@ ABOUT US SECTION
     max-width: 1300px;
   }
   .aboutus__list{
+    width: 848px;
+    max-height: 680px;
+    margin-inline: 0;
+  }
+  .aboutus__list-container{
     grid-area: 1 / 3 / 8 / 4;
-    max-width: 1080px;
-    transform: rotate(-90deg);
+    display: flex;
+    align-items: center;
   }
   .aboutus__item{
-    height: 180px;
+    height: 184px;
+    border-inline: 1px var(--color-grey-100) solid;
   }
   .aboutus__item:hover{
-    height: 800px;
+    height: 310px;
   }
   .aboutus__value__title{
-    margin-top: 45px;
-  }
-  .aboutus__value__text{
-    transform: rotate(90deg);
-    width: 50%;
-    margin-top: 275px;
-    margin-left: 275px;
+    padding-block: 50px;
+    font-size: 6.8vh;
   }
   .aboutus__link{
     margin-left: -750px;
