--- a/src/content/pages/shop.njk
+++ b/src/content/pages/shop.njk
@@ -19,7 +19,7 @@ permalink: /shop.html
                     <div class="shop__item"></div>
                     <div class="shop__item middle">
                         <h2 class="shopItem__title">Hoodie</h2>
-                        <a href="" class="shopItem__more"><img class="o-fluidimg" src="../assets/img/Mate_Star.svg" alt=""></a>
+                        <a href="product.html" class="shopItem__more"><img class="o-fluidimg shopItem__img" src="../assets/img/Mate_Star.svg" alt=""></a>
                         <ul class="shopItem__sizes">
                             <li class="shopItem__size">XS</li>
                             <li class="shopItem__size">S</li>
@@ -36,7 +36,7 @@ permalink: /shop.html
                     <div class="shop__item"></div>
                     <div class="shop__item middle">
                         <h2 class="shopItem__title">Hoodie</h2>
-                        <a href="" class="shopItem__more"><img class="o-fluidimg" src="../assets/img/Mate_Star.svg" alt=""></a>
+                        <a href="product.html" class="shopItem__more"><img class="o-fluidimg shopItem__img" src="../assets/img/Mate_Star.svg" alt=""></a>
                         <ul class="shopItem__sizes">
                             <li class="shopItem__size">XS</li>
                             <li class="shopItem__size">S</li>
@@ -53,7 +53,7 @@ permalink: /shop.html
                     <div class="shop__item"></div>
                     <div class="shop__item middle">
                         <h2 class="shopItem__title">Hoodie</h2>
-                        <a href="" class="shopItem__more"><img class="o-fluidimg" src="../assets/img/Mate_Star.svg" alt=""></a>
+                        <a href="product.html" class="shopItem__more"><img class="o-fluidimg shopItem__img" src="../assets/img/Mate_Star.svg" alt=""></a>
                         <ul class="shopItem__sizes">
                             <li class="shopItem__size">XS</li>
                             <li class="shopItem__size">S</li>
@@ -70,7 +70,7 @@ permalink: /shop.html
                     <div class="shop__item"></div>
                     <div class="shop__item middle">
                         <h2 class="shopItem__title">Hoodie</h2>
-                        <a href="" class="shopItem__more"><img class="o-fluidimg" src="../assets/img/Mate_Star.svg" alt=""></a>
+                        <a href="product.html" class="shopItem__more"><img class="o-fluidimg shopItem__img" src="../assets/img/Mate_Star.svg" alt=""></a>
                         <ul class="shopItem__sizes">
                             <li class="shopItem__size">XS</li>
                             <li class="shopItem__size">S</li>
@@ -87,7 +87,7 @@ permalink: /shop.html
                     <div class="shop__item"></div>
                     <div class="shop__item middle">
                         <h2 class="shopItem__title">Hoodie</h2>
-                        <a href="" class="shopItem__more"><img class="o-fluidimg" src="../assets/img/Mate_Star.svg" alt=""></a>
+                        <a href="product.html" class="shopItem__more"><img class="o-fluidimg shopItem__img" src="../assets/img/Mate_Star.svg" alt=""></a>
                         <ul class="shopItem__sizes">
                             <li class="shopItem__size">XS</li>
                             <li class="shopItem__size">S</li>
@@ -104,7 +104,7 @@ permalink: /shop.html
                     <div class="shop__item"></div>
                     <div class="shop__item middle">
                         <h2 class="shopItem__title">Hoodie</h2>
-                        <a href="" class="shopItem__more"><img class="o-fluidimg" src="../assets/img/Mate_Star.svg" alt=""></a>
+                        <a href="product.html" class="shopItem__more"><img class="o-fluidimg shopItem__img" src="../assets/img/Mate_Star.svg" alt=""></a>
                         <ul class="shopItem__sizes">
                             <li class="shopItem__size">XS</li>
                             <li class="shopItem__size">S</li>
